[package]
name = "murmur3"
version = "0.1.0"
authors = ["Aliénore Bouttefeux <alienore.bouttefeux@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/ABouttefeux/murmur3-rs"
license = "MIT"
categories = ["Algorithms"]
description  = "Native rust implementation of murmur3"
keywords  = ["murmur3", "hash", "MurmurHash"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.2"
