[package]
name = "murmur_hash_3"
version = "0.1.0"
authors = ["Aliénore Bouttefeux <alienore.bouttefeux@gmail.com>", "ablanleuil"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/ABouttefeux/murmur3-rs"
license = "MIT"
categories = ["Algorithms"]
description  = "Native rust implementation of murmur3"
keywords  = ["murmur3", "hash", "MurmurHash", "murmur_hash_3"]


[dependencies]
rand = "0.8.5"
